--- a/about.html
+++ b/about.html
@@ -12,17 +12,16 @@
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700">
     <link rel="stylesheet" href="css/font.css">
+   
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="stylesheet" href="css/custom.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
 
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
-
-    <title>Document</title>
+    <title>IOT Space</title>
 </head>
 
 <body>
@@ -41,6 +40,7 @@
                                 <span class="address">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     Địa chỉ: 63 Phan Đăng Lưu - Đà Nẵng - Việt Nam
+
                                     <a target="_blank"
                                         href="https://www.google.com/maps?ll=16.036388,108.21814&amp;z=17&amp;t=m&amp;hl=vi-VN&amp;gl=US&amp;mapclient=embed&amp;q=63+Phan+%C4%90%C4%83ng+L%C6%B0u+Ho%C3%A0+C%C6%B0%E1%BB%9Dng+B%E1%BA%AFc+H%E1%BA%A3i+Ch%C3%A2u+%C4%90%C3%A0+N%E1%BA%B5ng"></a>
                                 </span>
@@ -85,6 +85,10 @@
                         </ul>
                     </div>
                 </div>
+               <a class="menu-bar" href="#">
+                   <i class="fa fa-bars fa-sm" aria-hidden="true"></i>
+                </a>
+                
             </div>
         </div>
     </div>
@@ -238,7 +242,5 @@
 
         </div>
     </div>
-
 </body>
-<h1>dddddddddddd</h1>
 </html>
